syntax = "proto3";

package pos;

import "google/protobuf/timestamp.proto";

option go_package = "./proto";

service PosService {
  // Definisikan service methods di sini nanti
  rpc GetCustomerDetail(GetCustomerDetailRequest) returns (GetCustomerDetailResponse) {}
}

message GetCustomerDetailRequest {
  string id = 1;
  string name = 2;
}

message GetCustomerDetailResponse {
  string id = 1;
  string name = 2;
  string phone_number = 3;
  google.protobuf.Timestamp created_at = 4;
}
